[package]
name = "children-broadcaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
futures = "0.3.21"
anyhow = "1.0.58"
tokio = "1.19.2"
